Fixed lock icon z-index problem in sitemap editor.

--- a/src-gwt/org/opencms/gwt/client/ui/css/listItemWidget.css
+++ b/src-gwt/org/opencms/gwt/client/ui/css/listItemWidget.css
@@ -85,6 +85,12 @@ li div.itemContainer.cmsHovering{
     z-index: value("constants.css.zIndexInline");
 }
 
+@external sitemap;
+
+body.sitemap .itemContent div.lockIcon {
+	z-index: 5000;
+}
+
 .itemContent div.topRightIcon {
 	position: absolute;
 	left: 20px;
